2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp: pow() ==>  (1 << (ARRAYSIZE(s_code_bits))
	Thanks Thatcher.
	* gameswf/gameswf_dlist.cpp: forgot add_keypress_listener()

2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action(cpp, h): fixed set_target, target can be both 
	movie* and path
	* gameswf/gameswf_dlist(cpp, h): fixed goto_farme(), 
	Macromedia Flash ignores goto_frame(bad_frame) & does goto_frame then
	run actions from this frame. We do too. Removed display_list::reset() & clear()
	as we do not require them more.
	* gameswf/gameswf_test_ogl: commented fscommand messages because they stir to debugging
	* gameswf/gameswf_impl.cpp: Macromedia Flash does not call remove display object tag
	for 1-st frame therefore we should do it for it

2007-02-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl(h, cpp): 
	* gameswf/gameswf_dlist.cpp: fixed the incorrect sequence of
	execution of events
	* gameswf/samples/test_action_order(fla, swf): updated
	for fuller analysis of sequence of events

2007-02-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_keypress_event(swf, fla): added testcase
	* gameswf/gameswf_button.cpp: added keypress event handler, 
	events do not added to parent action list, and are executed at once
	* gameswf/gameswf_impl(h,cpp): optimized methods of keypress listener,
	added keypress & multi event handler,
	like on(release, press, keyPress "<Space>") {...},
	added do_actions(const array<action_buffer*>& action_list)
	to execute a code in the environment of the parent
	* gameswf/gameswf_test_ogl.cpp: added warning about version 7 & above
	* gameswf/gameswf_dlist(h,cpp): keypress event is activated/deactivated when 
	character is added/removed from dlist
	* gameswf/gameswf_action.h: operator= of action_buffer has been commented
	because	I need to assign same code to another events
	

2007-02-14  Vitaly Alexeev <tishka92@yahoo.com>
